--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,9 @@
                 <div class="local-video">
                     <video id="localVideo" autoplay muted playsinline></video>
                 </div>
-                <div class="remote-video">
-                    <video id="remoteVideo" autoplay muted playsinline></video>
-                </div>
+              <div class="remote-video">
+    <video id="remoteVideo" autoplay playsinline></video>
+</div>
             </div>
             <div>
                 <button id="end-call-btn" class="call call-disconnect d-none">
